// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmBalance do not show available atoms when the user has none in the first place 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="header-container"
    >
      <h1>
        Your Portfolio
      </h1>
       
      <div
        class="buttons"
      >
        <tmbtn-stub
          class="send-button"
          type="secondary"
          value="Send"
        />
         
        <tmbtn-stub
          class="withdraw-rewards"
          id="withdraw-btn"
          value="Claim Rewards"
        />
         
        <button
          class="tutorial-button"
        >
          <span>
            Need some tokens?
          </span>
        </button>
         
        <div
          class="currency-selector"
        >
          <img
            alt="USD currency"
            class="currency-flag"
            src="/img/icons/currencies/usd.png"
          />
           
          <select>
            <option
              hidden="hidden"
              value=""
            >
              USD
            </option>
             
            <option
              value="USD"
            >
              USD
            </option>
             
            <option
              value="EUR"
            >
              EUR
            </option>
             
            <option
              value="GBP"
            >
              GBP
            </option>
             
            <option
              value="JPY"
            >
              JPY
            </option>
             
            <option
              value="CHF"
            >
              CHF
            </option>
             
            <option
              value="DKK"
            >
              DKK
            </option>
             
            <option
              value="NOK"
            >
              NOK
            </option>
             
            <option
              value="SEK"
            >
              SEK
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      class="table four-columns"
    >
      <div
        class="table-cell big title"
      >
        Token
      </div>
       
      <div
        class="table-cell title"
      >
        Rewards
      </div>
       
      <div
        class="table-cell title available"
      >
        Available
      </div>
       
      <div
        class="table-cell title actions"
      />
       
      <div
        class="table-cell big"
      >
        <img
          alt="ATOM currency"
          class="currency-flag"
          src="/img/icons/currencies/tom.png"
        />
         
        <div
          class="total-and-fiat"
        >
          <span
            class="total"
          >
            
            0
            ATOM
          
          </span>
           
          <!---->
        </div>
      </div>
       
      <div
        class="table-cell rewards"
      >
        <h2>
          
          +5
          ATOM
        
        </h2>
      </div>
       
      <div
        class="table-cell available"
      >
        <span
          class="available-amount"
        >
          
          0
          ATOM
        
        </span>
      </div>
       
      <div
        class="table-cell actions"
      >
        <div
          class="icon-button-container"
        >
          <button
            class="icon-button circle-send-button"
          >
            <i
              class="material-icons"
            >
              send
            </i>
          </button>
          <span>
            Send
          </span>
        </div>
      </div>
       
      <div
        class="table-cell big"
      >
        <img
          alt="TOKEN1 currency"
          class="currency-flag"
          src="/img/icons/currencies/oken1.png"
        />
         
        <div
          class="total-and-fiat"
        >
          <span
            class="total"
          >
            
              0
              TOKEN1
            
          </span>
           
          <!---->
        </div>
      </div>
       
      <div
        class="table-cell rewards"
      >
        <h2>
          
            +4.5
            TOKEN1
          
        </h2>
      </div>
       
      <div
        class="table-cell available"
      />
       
      <div
        class="table-cell actions"
      >
        <div
          class="icon-button-container"
        >
          <button
            class="icon-button"
          >
            <i
              class="material-icons"
            >
              send
            </i>
          </button>
          <span>
            Send
          </span>
        </div>
      </div>
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;

exports[`TmBalance show the balance header when signed in 1`] = `
<div
  class="balance-header"
>
  <div>
    <div
      class="header-container"
    >
      <h1>
        Your Portfolio
      </h1>
       
      <div
        class="buttons"
      >
        <tmbtn-stub
          class="send-button"
          type="secondary"
          value="Send"
        />
         
        <tmbtn-stub
          class="withdraw-rewards"
          id="withdraw-btn"
          value="Claim Rewards"
        />
         
        <button
          class="tutorial-button"
        >
          <span>
            Need some tokens?
          </span>
        </button>
         
        <div
          class="currency-selector"
        >
          <img
            alt="USD currency"
            class="currency-flag"
            src="/img/icons/currencies/usd.png"
          />
           
          <select>
            <option
              hidden="hidden"
              value=""
            >
              USD
            </option>
             
            <option
              value="USD"
            >
              USD
            </option>
             
            <option
              value="EUR"
            >
              EUR
            </option>
             
            <option
              value="GBP"
            >
              GBP
            </option>
             
            <option
              value="JPY"
            >
              JPY
            </option>
             
            <option
              value="CHF"
            >
              CHF
            </option>
             
            <option
              value="DKK"
            >
              DKK
            </option>
             
            <option
              value="NOK"
            >
              NOK
            </option>
             
            <option
              value="SEK"
            >
              SEK
            </option>
          </select>
        </div>
      </div>
    </div>
     
    <div
      class="table four-columns"
    >
      <div
        class="table-cell big title"
      >
        Token
      </div>
       
      <div
        class="table-cell title"
      >
        Rewards
      </div>
       
      <div
        class="table-cell title available"
      >
        Available
      </div>
       
      <div
        class="table-cell title actions"
      />
       
      <div
        class="table-cell big"
      >
        <img
          alt="ATOM currency"
          class="currency-flag"
          src="/img/icons/currencies/tom.png"
        />
         
        <div
          class="total-and-fiat"
        >
          <span
            class="total"
          >
            
            3,210
            ATOM
          
          </span>
           
          <!---->
        </div>
      </div>
       
      <div
        class="table-cell rewards"
      >
        <h2>
          
          +5
          ATOM
        
        </h2>
      </div>
       
      <div
        class="table-cell available"
      >
        <span
          class="available-amount"
        >
          
          1,230
          ATOM
        
        </span>
      </div>
       
      <div
        class="table-cell actions"
      >
        <div
          class="icon-button-container"
        >
          <button
            class="icon-button circle-send-button"
          >
            <i
              class="material-icons"
            >
              send
            </i>
          </button>
          <span>
            Send
          </span>
        </div>
      </div>
       
      <div
        class="table-cell big"
      >
        <img
          alt="TOKEN1 currency"
          class="currency-flag"
          src="/img/icons/currencies/oken1.png"
        />
         
        <div
          class="total-and-fiat"
        >
          <span
            class="total"
          >
            
              0
              TOKEN1
            
          </span>
           
          <!---->
        </div>
      </div>
       
      <div
        class="table-cell rewards"
      >
        <h2>
          
            +4.5
            TOKEN1
          
        </h2>
      </div>
       
      <div
        class="table-cell available"
      />
       
      <div
        class="table-cell actions"
      >
        <div
          class="icon-button-container"
        >
          <button
            class="icon-button"
          >
            <i
              class="material-icons"
            >
              send
            </i>
          </button>
          <span>
            Send
          </span>
        </div>
      </div>
    </div>
     
    <sendmodal-stub
      denoms="ATOM"
    />
     
    <modalwithdrawrewards-stub />
     
    <!---->
  </div>
</div>
`;
